--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "gatsby": "^5.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.8.4"
   }
 }
