--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.14",
     "gatsby": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.4"
   }
 }
